--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load tz %}
 {% block body %}
     <header class="header">
         <h2>History of Crawler {{ crawler.name }}</h2>
@@ -21,7 +22,7 @@
             <tr>
                 <td>{{ record.website }}</td>
                 <td>{{ record.user }}</td>
-                <td>{{ record.created_at }}</td>
+                <td>{{ record.created_at|localtime }}</td>
                 <td>{{ record.complete_at }}</td>
                 <td>{% if record.is_successful %}
                     <i class="fas fa-check"></i> {% else %}
