--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load tz %}
 {% block body %}
 
     <header class="header">
@@ -18,7 +19,7 @@
                             URL: {{ crawler.get_current_info.url }}</p>
 
                         <p class="card-text"><small class="text-muted">Started
-                            at: {{ crawler.get_current_info.started_at }}</small>
+                            at: {{ crawler.get_current_info.started_at|localtime }}</small>
                         </p>
                         <hr class="my-4">
                         <div>
