--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -23,7 +23,7 @@
                 <td>{{ record.website }}</td>
                 <td>{{ record.user }}</td>
                 <td>{{ record.created_at|localtime }}</td>
-                <td>{{ record.complete_at }}</td>
+                <td>{{ record.complete_at|localtime }}</td>
                 <td>{% if record.is_successful %}
                     <i class="fas fa-check"></i> {% else %}
                     <i class="fas fa-times"></i> {% endif %}</td>
