--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -3,6 +3,30 @@
     <header class="header">
         <h2>History of Crawler {{ crawler.name }}</h2>
     </header>
+    <div class="row justify-content-between">
+        <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+        </div>
+    <div>
+
+    </div>
+        <a href="/">&laquo; back</a>
+    </div>
+
     <table class="table table-striped">
         <thead>
         <tr>
@@ -17,7 +41,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for record in crawler.get_history %}
+        {% for record in page_obj %}
             <tr>
                 <td>{{ record.website }}</td>
                 <td>{{ record.user }}</td>
