--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,45 +11,38 @@
         Completed: {{ overall_stat.completed }}
     </div></div>
     <div class="row">
-        {% for crawler in crawlers %}
+        {% for tile in tiles %}
 
             <div class="col-4">
                 <div class="card" style="margin-top: 2em">
-                    <div class="card-header {{ crawler.get_current_info.status }}"></div>
+                    <div class="card-header {{ tile.status }}"></div>
                     <div class="card-body">
                         <h5 class="card-title"><a
-                                href="/crawler/{{ crawler.name }}">{{ crawler.name }}</a>
-                            / {{ crawler.get_current_info.status }}</h5>
+                                href="/crawler/{{ tile.name }}">{{ tile.name }}</a>
+                            / {{ tile.status }}</h5>
                         <p class="card-text">
-                            URL: {{ crawler.get_current_info.url }}</p>
+                            URL: {{ tile.website }}</p>
 
                         <p class="card-text"><small class="text-muted">Started
-                            at: {{ crawler.get_current_info.started_at}}</small>
+                            at: {{ tile.created_at }}</small>
                         </p>
                         <hr class="my-4">
                         <div>
 
-                            {% for info in crawler.get_stat_info %}
                                 <small class="text-muted">
-                                    Loaded: {{ info.loaded }} /
-                                    Successful: {{ info.successful }} /
-                                    Completed: {{ info.completed }}
+                                    Loaded: {{ tile.loaded }} /
+                                    Successful: {{ tile.successful }} /
+                                    Completed: {{ tile.completed }}
                                 </small>
-                                {% empty %}
-                                <small class="text-muted">
-                                    Loaded: 0 /
-                                    Successful: 0 /
-                                    Completed: 0
-                                </small>
-                            {% endfor %}
+
                         </div>
                     </div>
 
-                    {% if crawler.get_current_info.msg %}
-                        <div class="alert alert-warning" role="alert">
-                            {{ crawler.get_current_info.msg }}
-                        </div>
-                    {% endif %}
+{#                    {% if crawler.get_current_info.msg %}#}
+{#                        <div class="alert alert-warning" role="alert">#}
+{#                            {{ crawler.get_current_info.msg }}#}
+{#                        </div>#}
+{#                    {% endif %}#}
                 </div>
             </div>
 
